--- a/style/search.css
+++ b/style/search.css
@@ -1,11 +1,87 @@
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* RESET */
+
+:root {
+    --text-color: #000;
+    --header-height: 60px;
+    --sidebar-width: 250px;
+    --primary: linear-gradient(to right bottom, #ff8f26, #ff5117);
+    --red: #fe2c55;
+}
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Be Vietnam Pro', sans-serif;
 }
 
 .app {
     width: 100%;
     min-height: 100vh;
     background-color: #e7e7e7;
+}
+
+.search-container {
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    max-width: calc(100% - 60px);
+    width: 500px;
+    margin: 0 auto;
+}
+
+.input-group {
+    position: relative;
+    flex: 1;
+}
+
+.search-container input {
+    width: 100%;
+    padding: 12px;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    border: 1px solid rgb(0, 183, 183);
+}
+
+.input-group label {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    transition: all 0.2s ease;
+    padding: 0 5px;
+}
+
+input:not(:placeholder-shown) + label {
+    top: 0;
+    font-size: 12px;
+}
+
+.main {
+    max-width: 1200px;
+    padding: 0 20px;
+    padding-bottom: 40px;
+    margin: 0 auto;
+}
+
+.search-container button {
+    padding: 10px 20px;
+    border-radius: 4px;
+    border: none;
+    background: var(--primary);
+    color: #fff;
+    cursor: pointer;
+    border-bottom: 1px solid #333;
+    box-shadow: 0 4px 0px #ff5117;
+    transition: all 0.1s linear;
+    outline: none;
+}
+
+.search-container button:active {
+    transform: translateY(4px);
+    box-shadow: 0 0px 0px #ff5117;
 }
