--- a/style/home.css
+++ b/style/home.css
@@ -1,135 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-/* RESET */
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Be Vietnam Pro', sans-serif;
-}
-
-:root {
-    --text-color: #000;
-    --header-height: 60px;
-    --sidebar-width: 250px;
-    --primary: linear-gradient(to right bottom, #ff8f26, #ff5117);
-    --red: #fe2c55;
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-html *::-webkit-scrollbar {
-    border-radius: 0;
-    width: 4px;
-}
-
-html {
-    ::-webkit-scrollbar-thumb {
-        border-radius: 4px;
-        background-color: rgba(22, 24, 35, 0.3);
-    }
-
-    *::-webkit-scrollbar-track {
-        border-radius: 0;
-        background-color: inherit !important;
-    }
-}
-
-body {
-    overflow-x: hidden;
-    overflow-y: overlay;
-}
-
-a {
-    color: #000;
-    text-decoration: none;
-}
-
-.toast {
-    padding: 10px 16px;
-    border-radius: 4px;
-    background-color: #fff;
-}
-
 /* APP */
 .app {
-    width: 100%;
+    width: 100vw;
     min-height: 100vh;
     background-color: #e7e7e7;
-}
-
-/* HEADER */
-.header {
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding: 0 24px;
-    height: var(--header-height);
-    background-color: #fff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid #e7e7e7;
-    z-index: 10;
-}
-
-.nav-list {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    list-style: none;
-}
-
-.nav-item a {
-    text-decoration: none;
-    color: #000;
-    width: 35px;
-    /* kích thước hình vuông */
-    aspect-ratio: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    background-color: #e7e7e7;
-}
-
-.tabs {
-    display: flex;
-    gap: 10px;
-}
-
-.tab-item {
-    cursor: pointer;
-    padding: 10px 16px;
-    border-radius: 4px;
-    background-color: #e7e7e7;
-    border: none;
-}
-
-.tab-item.active {
-    background-color: #ff5117;
-    color: #fff;
-}
-
-.nav-cart {
-    position: relative;
-}
-
-.nav-cart-length {
-    position: absolute;
-    top: -5px;
-    right: -5px;
-    width: 20px;
-    aspect-ratio: 1;
-    border-radius: 50%;
-    background-color: var(--red);
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 12px;
 }
 
 /* MAIN */
