--- a/style/product.css
+++ b/style/product.css
@@ -21,7 +21,7 @@
     cursor: pointer;
     transition: all 0.1s linear;
     background-color: #fff;
-    border: 1px solid rgb(148, 148, 148);
+    border: 1px solid var(--border);
     display: flex;
     flex-direction: column;
 }
