--- a/style/cart.css
+++ b/style/cart.css
@@ -1,14 +1,36 @@
 body {
-    background-color: #e7e7e7;
+    background-color: var(--default-background);
     min-height: 100vh;
 }
 
+.cart-header {
+    text-align: center;
+    font-weight: 500;
+    padding: 20px 0;
+    color: var(--price-color);
+}
+
 .main {
-    padding: 40px 20px;
+    padding: 0 20px;
     padding-bottom: 120px;
     max-width: 1024px;
     margin: 0 auto;
     background-color: #f5f5f5;
+}
+
+.cart-empty {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+    color: var(--price-color);
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    gap: 10px;
+}
+
+.fa-cart-shopping {
+    font-size: 70px;
 }
 
 .product-list {
