--- a/style/product.css
+++ b/style/product.css
@@ -21,9 +21,10 @@
     cursor: pointer;
     transition: all 0.1s linear;
     background-color: #fff;
-    border: 1px solid var(--border);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .product-item-name {
