--- a/style/search.css
+++ b/style/search.css
@@ -1,25 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-/* RESET */
-
-:root {
-    --text-color: #000;
-    --header-height: 60px;
-    --sidebar-width: 250px;
-    --primary: linear-gradient(to right bottom, #ff8f26, #ff5117);
-    --red: #fe2c55;
-}
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Be Vietnam Pro', sans-serif;
-}
-
-.app {
-    width: 100%;
-    min-height: 100vh;
-    background-color: #e7e7e7;
+.back-btn {
+    padding: 10px 20px;
+    border-radius: 4px;
+    border: none;
+    background: var(--primary);
+    color: #fff;
+    margin: 20px 0 0 20px;
+    cursor: pointer;
+    display: inline-block;
 }
 
 .search-container {
